[package]
name = "es-bully"
version = "0.1.0"
authors = ["Elias.Yao <siran0611@gmail.com>"]
edition = "2018"
description = ""
readme = "README.md"


[dependencies]
crossbeam-deque = "0.8"
dashmap = "4.0"
fail = "0.4"
lazy_static = "1"
num_cpus = "1.0"
parking_lot_core = "0.8"
rand = "0.8"
snafu = "0.6.10"
tokio = { version = "1.0", features = ["time", "rt-multi-thread"] }

[dev-dependencies]
criterion = "0.3"
tokio = { version = "1.0", features = ["sync", "rt-multi-thread"] }
async-std = "1.0"
threadpool = "1.0"
futures-timer = "3"